--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Varox",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
-    "moment": "^2.22.0"
+    "moment": "^2.22.0",
+    "mongoose": "^5.0.13"
   }
 }
